--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
         <section class="elements content__elements">
             <div class="element">
-                <img class="element__image" alt="Karachayevsk" src="./images/karachayevsk.png">
+                <img class="element__image" alt="Карачаевск" src="./images/karachayevsk.png">
                 <article class="element__signature">
                     <h2 class="element__sign">Карачаевск
                     </h2>
@@ -42,7 +42,7 @@
                 </article>
             </div>
             <div class="element">
-                <img class="element__image" alt="Mount_Elbrus" src="./images/Mount_Elbrus.png">
+                <img class="element__image" alt="Гора Эльбрус" src="./images/Mount_Elbrus.png">
                 <article class="element__signature">
                     <h2 class="element__sign">Гора Эльбрус
                     </h2>
@@ -51,7 +51,7 @@
                 </article>
             </div>
             <div class="element">
-                <img class="element__image" alt="Dombay" src="./images/Dombay.png">
+                <img class="element__image" alt="Домбай" src="./images/Dombay.png">
                 <article class="element__signature">
                     <h2 class="element__sign">Домбай
                     </h2>
@@ -60,7 +60,7 @@
                 </article>
             </div>
             <div class="element">
-                <img class="element__image" alt="Mount_Elbrus" src="./images/Mount_Elbrus.png">
+                <img class="element__image" alt="Гора Эльбрус" src="./images/Mount_Elbrus.png">
                 <article class="element__signature">
                     <h2 class="element__sign">Гора Эльбрус
                     </h2>
@@ -69,7 +69,7 @@
                 </article>
             </div>
             <div class="element">
-                <img class="element__image" alt="Dombay" src="./images/Dombay.png">
+                <img class="element__image" alt="Домбай" src="./images/Dombay.png">
                 <article class="element__signature">
                     <h2 class="element__sign">Домбай
                     </h2>
@@ -78,7 +78,7 @@
                 </article>
             </div>
             <div class="element">
-                <img class="element__image" alt="Karachay_Cherkessk" src="./images/karachay_cherkessk.png">
+                <img class="element__image" alt="Карачаево- Черкесск" src="./images/karachay_cherkessk.png">
                 <article class="element__signature">
                     <h2 class="element__sign">Карачаево- Черкесск
                     </h2>
