--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main class="content page__content">
         <section class="profile">
-            <article class="profile__place">
+            <div class="profile__place">
                 <img class="profile__icon" alt="иконка пользователя" src="./images/image__profile.jpg">
                 <div class="profile__info">
                     <div class="profile__first-line">
@@ -24,68 +24,68 @@
                         <button type="button" class="profile__edit-button">
                         </button>
                     </div>
-                    <p class="profile__taitle">Исследователь океана
+                    <p class="profile__subtitle">Исследователь океана
                     </p>
                 </div>
-            </article>
+            </div>
             <button type="button" class="profile__add-button">
             </button>
         </section>
         <section class="elements content__elements">
-            <div class="element">
+            <article class="element">
                 <img class="element__image" alt="Карачаевск" src="./images/karachayevsk.png">
-                <article class="element__signature">
-                    <h2 class="element__sign">Карачаевск
+                <div class="element__signature">
+                    <h2 class="element__title">Карачаевск
                     </h2>
-                    <button class="element__heart">
+                    <button type class="element__heart">
                     </button>
-                </article>
-            </div>
-            <div class="element">
+                </div>    
+            </article>                                
+            <article class="element">
                 <img class="element__image" alt="Гора Эльбрус" src="./images/Mount_Elbrus.png">
-                <article class="element__signature">
-                    <h2 class="element__sign">Гора Эльбрус
+                <div class="element__signature">
+                    <h2 class="element__title">Гора Эльбрус
                     </h2>
-                    <button class="element__heart">
+                    <button type class="element__heart">
                     </button>
-                </article>
-            </div>
-            <div class="element">
+                </div>
+            </article>
+            <article class="element">
                 <img class="element__image" alt="Домбай" src="./images/Dombay.png">
-                <article class="element__signature">
-                    <h2 class="element__sign">Домбай
+                <div class="element__signature">
+                    <h2 class="element__title">Домбай
                     </h2>
-                    <button class="element__heart">
+                    <button type class="element__heart">
                     </button>
-                </article>
-            </div>
-            <div class="element">
+                </div>
+            </article>
+            <article class="element">
                 <img class="element__image" alt="Гора Эльбрус" src="./images/Mount_Elbrus.png">
-                <article class="element__signature">
-                    <h2 class="element__sign">Гора Эльбрус
+                <div class="element__signature">
+                    <h2 class="element__title">Гора Эльбрус
                     </h2>
-                    <button class="element__heart">
+                    <button type class="element__heart">
                     </button>
-                </article>
-            </div>
-            <div class="element">
+                </div>
+            </article>
+            <article class="element">
                 <img class="element__image" alt="Домбай" src="./images/Dombay.png">
-                <article class="element__signature">
-                    <h2 class="element__sign">Домбай
+                <div class="element__signature">
+                    <h2 class="element__title">Домбай
                     </h2>
-                    <button class="element__heart">
+                    <button type class="element__heart">
                     </button>
-                </article>
-            </div>
-            <div class="element">
+                </div>
+            </article>
+            <article class="element">
                 <img class="element__image" alt="Карачаево- Черкесск" src="./images/karachay_cherkessk.png">
-                <article class="element__signature">
-                    <h2 class="element__sign">Карачаево- Черкесск
+                <div class="element__signature">
+                    <h2 class="element__title">Карачаево- Черкесск
                     </h2>
-                    <button class="element__heart">
+                    <button type class="element__heart">
                     </button>
-                </article>
-            </div>
+                </div>
+            </article>
         </section>
     </main>
     <footer class="footer page__footer">
@@ -100,8 +100,7 @@
             </h2>
             <form name="popupСhange" class="popup__form">
                 <input name="name" class="popup__input popup__input_data_name" type="text" value="Жак-Ив Кусто">
-                <input name="description" class="popup__input popup__input_data_description" type="text"
-                    value="Исследователь океана">
+                <input name="description" class="popup__input popup__input_data_description" type="text"value="Исследователь океана">
                 <button type="submit" class="popup__save-button">Сохранить
                 </button>
             </form>
