--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="element__signature">
                     <h2 class="element__title">Карачаевск
                     </h2>
-                    <button type class="element__heart">
+                    <button type="button" class="element__heart">
                     </button>
                 </div>    
             </article>                                
@@ -46,7 +46,7 @@
                 <div class="element__signature">
                     <h2 class="element__title">Гора Эльбрус
                     </h2>
-                    <button type class="element__heart">
+                    <button type="button" class="element__heart">
                     </button>
                 </div>
             </article>
@@ -55,7 +55,7 @@
                 <div class="element__signature">
                     <h2 class="element__title">Домбай
                     </h2>
-                    <button type class="element__heart">
+                    <button type="button" class="element__heart">
                     </button>
                 </div>
             </article>
@@ -64,7 +64,7 @@
                 <div class="element__signature">
                     <h2 class="element__title">Гора Эльбрус
                     </h2>
-                    <button type class="element__heart">
+                    <button type="button" class="element__heart">
                     </button>
                 </div>
             </article>
@@ -73,7 +73,7 @@
                 <div class="element__signature">
                     <h2 class="element__title">Домбай
                     </h2>
-                    <button type class="element__heart">
+                    <button type="button" class="element__heart">
                     </button>
                 </div>
             </article>
@@ -82,7 +82,7 @@
                 <div class="element__signature">
                     <h2 class="element__title">Карачаево- Черкесск
                     </h2>
-                    <button type class="element__heart">
+                    <button type="button" class="element__heart">
                     </button>
                 </div>
             </article>
@@ -100,7 +100,7 @@
             </h2>
             <form name="popupСhange" class="popup__form">
                 <input name="name" class="popup__input popup__input_data_name" type="text" value="Жак-Ив Кусто">
-                <input name="description" class="popup__input popup__input_data_description" type="text"value="Исследователь океана">
+                <input name="description" class="popup__input popup__input_data_description" type="text" value="Исследователь океана">
                 <button type="submit" class="popup__save-button">Сохранить
                 </button>
             </form>
