--- a/index.html
+++ b/index.html
@@ -2,112 +2,101 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pages/index.css">
-    <title>Mesto Russia
-    </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./pages/index.css">
+  <title>Mesto Russia</title>
 </head>
 
 <body class="page">
-    <header class="header page__header">
-        <img class="header__logo" alt="логотип" src="./images/logo/logo__pc.svg">
-    </header>
-    <main class="content page__content">
-        <section class="profile">
-            <div class="profile__place">
-                <img class="profile__icon" alt="иконка пользователя" src="./images/image__profile.jpg">
-                <div class="profile__info">
-                    <div class="profile__first-line">
-                        <h1 class="profile__name">Жак-Ив Кусто
-                        </h1>
-                        <button type="button" class="profile__edit-button">
-                        </button>
-                    </div>
-                    <p class="profile__subtitle">Исследователь океана
-                    </p>
-                </div>
-            </div>
-            <button type="button" class="profile__add-button">
+  <header class="header page__header">
+    <img class="header__logo" alt="логотип" src="./images/logo/logo__pc.svg">
+  </header>
+  <main class="content page__content">
+    <section class="profile">
+      <div class="profile__place">
+        <img class="profile__icon" alt="иконка пользователя" src="./images/image__profile.jpg">
+        <div class="profile__info">
+          <div class="profile__first-line">
+            <h1 class="profile__name">Жак-Ив Кусто
+            </h1>
+            <button type="button" class="profile__edit-button">
             </button>
-        </section>
-        <section class="elements content__elements">
-            <article class="element">
-                <img class="element__image" alt="Карачаевск" src="./images/karachayevsk.png">
-                <div class="element__signature">
-                    <h2 class="element__title">Карачаевск
-                    </h2>
-                    <button type="button" class="element__heart">
-                    </button>
-                </div>    
-            </article>                                
-            <article class="element">
-                <img class="element__image" alt="Гора Эльбрус" src="./images/Mount_Elbrus.png">
-                <div class="element__signature">
-                    <h2 class="element__title">Гора Эльбрус
-                    </h2>
-                    <button type="button" class="element__heart">
-                    </button>
-                </div>
-            </article>
-            <article class="element">
-                <img class="element__image" alt="Домбай" src="./images/Dombay.png">
-                <div class="element__signature">
-                    <h2 class="element__title">Домбай
-                    </h2>
-                    <button type="button" class="element__heart">
-                    </button>
-                </div>
-            </article>
-            <article class="element">
-                <img class="element__image" alt="Гора Эльбрус" src="./images/Mount_Elbrus.png">
-                <div class="element__signature">
-                    <h2 class="element__title">Гора Эльбрус
-                    </h2>
-                    <button type="button" class="element__heart">
-                    </button>
-                </div>
-            </article>
-            <article class="element">
-                <img class="element__image" alt="Домбай" src="./images/Dombay.png">
-                <div class="element__signature">
-                    <h2 class="element__title">Домбай
-                    </h2>
-                    <button type="button" class="element__heart">
-                    </button>
-                </div>
-            </article>
-            <article class="element">
-                <img class="element__image" alt="Карачаево- Черкесск" src="./images/karachay_cherkessk.png">
-                <div class="element__signature">
-                    <h2 class="element__title">Карачаево- Черкесск
-                    </h2>
-                    <button type="button" class="element__heart">
-                    </button>
-                </div>
-            </article>
-        </section>
-    </main>
-    <footer class="footer page__footer">
-        <p class="footer__copyright">&copy;2023 Mesto Russia
-        </p>
-    </footer>
-    <div class="popup">
-        <div class="popup__container">
-            <button type="button" class="popup__close-button">
-            </button>
-            <h2 class="popup__title">Редактировать профиль
-            </h2>
-            <form name="popupСhange" class="popup__form">
-                <input name="name" class="popup__input popup__input_data_name" type="text" value="Жак-Ив Кусто">
-                <input name="description" class="popup__input popup__input_data_description" type="text" value="Исследователь океана">
-                <button type="submit" class="popup__save-button">Сохранить
-                </button>
-            </form>
+          </div>
+          <p class="profile__subtitle">Исследователь океана
+          </p>
         </div>
+      </div>
+      <button type="button" class="profile__add-button">
+      </button>
+    </section>
+    <section class="elements content__elements">
+    </section>
+  </main>
+
+  <div class="popup popup_type_edit">
+    <div class="popup__container popup__container_type_edit">
+      <h2 class="popup__title">Редактировать профиль
+      </h2>
+      <form name="popupСhange" class="popup__form popup__form_type_add">
+        <input type="text" required class="popup__input popup__input_data-name" placeholder="Имя" name="input-name">
+        <input type="text" required class="popup__input popup__input_data-description" placeholder="Род занятия"
+          name="input-description">
+        <button class="popup__save-button" aria-label="сохранить" type="submit">Сохранить
+        </button>
+      </form>
+      <button class="popup__close-button" aria-label="закрыть" type="button">
+      </button>
     </div>
-    <script src="./scripts/index.js">
-    </script>
+  </div>
+
+  <div class="popup popup_type_add">
+    <div class="popup__container popup__container_type_add">
+      <h2 class="popup__title">Новое место</h2>
+      <form name="popupСhange" class="popup__form popup__form_type_add">
+        <input type="text" required class="popup__input popup__input_data-title" placeholder="Название"
+          name="input-title">
+        <input type="url" required class="popup__input popup__input_data-photo" placeholder="Ссылка на картинку"
+          name="input-photo">
+        <button class="popup__save-button" aria-label="сохранить" type="submit">Сохранить
+        </button>
+      </form>
+      <button class="popup__close-button" aria-label="закрыть" type="button">
+      </button>
+    </div>
+  </div>
+
+  <div class="popup popup_type_photo">
+    <div class="popup__container popup__container_type_photo">
+      <img src="#" class="popup__image-full-screen" alt="">
+      <h2 class="popup__title-full-screen">
+      </h2>
+      <button type="button" aria-label="закрыть" class="popup__close-button">
+      </button>
+    </div>
+  </div>
+
+  <template class="card-template">
+    <article class="element">
+      <img src="#" class="element__image" alt="">
+      <div class="element__signature">
+        <h2 class="element__title">
+        </h2>
+        <button type="button" class="element__heart-delete">
+        </button>
+        <button type="button" aria-label="Убрать сердечко" class="element__heart">
+        </button>
+      </div>
+    </article>
+  </template>
+
+  <footer class="footer page__footer">
+    <p class="footer__copyright">&copy;2023 Mesto Russia
+    </p>
+  </footer>
+
+  <script src="./scripts/index.js">
+  </script>
 </body>
 
 </html>
