--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
       </h2>
       <form name="popupСhange" class="popup__form popup__form_type_add">
         <input type="text" required class="popup__input popup__input_data-name" placeholder="Имя" name="input-name">
-        <input type="text" required class="popup__input popup__input_data-description" placeholder="Род занятия"
-          name="input-description">
+        <input type="text" required class="popup__input popup__input_data-description" placeholder="Вид деятельности" name="input-description">
         <button class="popup__save-button" aria-label="сохранить" type="submit">Сохранить
         </button>
       </form>
@@ -95,8 +94,11 @@
     </p>
   </footer>
 
+  <script src="./scripts/constants.js">
+  </script>
   <script src="./scripts/index.js">
   </script>
+  
 </body>
 
 </html>
