--- a/index.html
+++ b/index.html
@@ -38,10 +38,16 @@
     <div class="popup__container popup__container_type_edit">
       <h2 class="popup__title">Редактировать профиль
       </h2>
-      <form name="popupСhange" class="popup__form popup__form_type_add">
-        <input type="text" required class="popup__input popup__input_data-name" placeholder="Имя" name="input-name">
-        <input type="text" required class="popup__input popup__input_data-description" placeholder="Вид деятельности" name="input-description">
-        <button class="popup__save-button" aria-label="сохранить" type="submit">Сохранить
+      <form name="popupСhange" class="popup__form popup__form_type_add" novalidate>
+        <input id="username" type="text" required class="popup__input popup__input_data-name" placeholder="Имя"
+          name="input-name" minlength='2' maxlength='40'>
+        <span class="popup__text-error username-error">
+        </span>
+        <input id="activity" type="text" required class="popup__input popup__input_data-description"
+          placeholder="Вид деятельности" name="input-description" minlength='2' maxlength='200'>
+        <span class="popup__text-error activity-error">
+        </span>
+        <button class="popup__save-button popup__save-button_disabled" aria-label="сохранить" type="submit">Сохранить
         </button>
       </form>
       <button class="popup__close-button" aria-label="закрыть" type="button">
@@ -51,13 +57,18 @@
 
   <div class="popup popup_type_add">
     <div class="popup__container popup__container_type_add">
-      <h2 class="popup__title">Новое место</h2>
-      <form name="popupСhange" class="popup__form popup__form_type_add">
-        <input type="text" required class="popup__input popup__input_data-title" placeholder="Название"
-          name="input-title">
-        <input type="url" required class="popup__input popup__input_data-photo" placeholder="Ссылка на картинку"
-          name="input-photo">
-        <button class="popup__save-button" aria-label="сохранить" type="submit">Сохранить
+      <h2 class="popup__title">Новое место
+      </h2>
+      <form name="popupСhange" class="popup__form popup__form_type_add" novalidate>
+        <input id="title" type="text" required class="popup__input popup__input_data-title" placeholder="Название"
+          name="input-title" minlength='2' maxlength='30'>
+        <span class="popup__text-error title-error">
+        </span>
+        <input id="photo" type="url" required class="popup__input popup__input_data-photo"
+          placeholder="Ссылка на картинку" name="input-photo">
+        <span class="popup__text-error photo-error">
+        </span>
+        <button class="popup__save-button popup__save-button_disabled" aria-label="сохранить" type="submit">Сохранить
         </button>
       </form>
       <button class="popup__close-button" aria-label="закрыть" type="button">
@@ -93,12 +104,15 @@
     <p class="footer__copyright">&copy;2023 Mesto Russia
     </p>
   </footer>
-
+  <script src="scripts/errorMessages.js">
+  </script>
+  <script src="./scripts/validate.js">
+  </script>
   <script src="./scripts/constants.js">
   </script>
   <script src="./scripts/index.js">
   </script>
-  
+
 </body>
 
 </html>
