--- a/index.html
+++ b/index.html
@@ -104,13 +104,9 @@
     <p class="footer__copyright">&copy;2023 Mesto Russia
     </p>
   </footer>
-  <script src="scripts/ErrorMessages.js">
+  <script src="./scripts/constants.js">
   </script>
-  <script src="scripts/FormValidator.js">
-  </script>
-  <script src="scripts/InitialCards.js">
-  </script>
-  <script src="scripts/Popup.js">
+  <script type="module" src="./scripts/index.js">
   </script>
 
 </body>
