--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto Russia</title>
 </head>
 
 <body class="page">
   <header class="header page__header">
-    <img class="header__logo" alt="логотип" src="./images/logo/logo__pc.svg">
+    <img class="header__logo" alt="логотип" src="<%=require('./images/logo/logo__pc.svg')%>">
   </header>
   <main class="content page__content">
     <section class="profile">
       <div class="profile__place">
-        <img class="profile__icon" alt="иконка пользователя" src="./images/image__profile.jpg">
+        <img class="profile__icon" alt="иконка пользователя" src="<%=require('./images/image__profile.jpg')%>">
         <div class="profile__info">
           <div class="profile__first-line">
             <h1 class="profile__name">Жак-Ив Кусто
@@ -104,8 +103,6 @@
     <p class="footer__copyright">&copy;2023 Mesto Russia
     </p>
   </footer>
-  <script type="module" src="./scripts/index.js">
-  </script>
 
 </body>
 
