--- a/src/index.html
+++ b/src/index.html
@@ -1,109 +1,222 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mesto Russia</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mesto Russia</title>
-</head>
-
-<body class="page">
-  <header class="header page__header">
-    <img class="header__logo" alt="логотип" src="<%=require('./images/logo/logo__pc.svg')%>">
-  </header>
-  <main class="content page__content">
-    <section class="profile">
-      <div class="profile__place">
-        <img class="profile__icon" alt="иконка пользователя" src="<%=require('./images/image__profile.jpg')%>">
-        <div class="profile__info">
-          <div class="profile__first-line">
-            <h1 class="profile__name">Жак-Ив Кусто
-            </h1>
-            <button type="button" class="profile__edit-button">
-            </button>
+  <body class="page">
+    <header class="header page__header">
+      <img
+        class="header__logo"
+        alt="логотип"
+        src="<%=require('./images/logo/logo__pc.svg')%>"
+      />
+    </header>
+    <main class="content page__content">
+      <section class="profile">
+        <div class="profile__place">
+          <div class="profile__overlay">
+            <img class="profile__icon" alt="иконка пользователя" src="" />
           </div>
-          <p class="profile__subtitle">Исследователь океана
-          </p>
+          <div class="profile__info">
+            <div class="profile__first-line">
+              <h1 class="profile__name"></h1>
+              <button type="button" class="profile__edit-button"></button>
+            </div>
+            <p class="profile__subtitle"></p>
+          </div>
         </div>
+        <button type="button" class="profile__add-button"></button>
+      </section>
+      <section class="elements content__elements"></section>
+    </main>
+
+    <div class="popup popup_type_edit">
+      <div class="popup__container popup__container_type_edit">
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form
+          name="popupСhange"
+          class="popup__form popup__form_type_add"
+          novalidate
+        >
+          <input
+            id="username"
+            type="text"
+            required
+            class="popup__input popup__input_data-name"
+            placeholder="Имя"
+            name="userName"
+            minlength="2"
+            maxlength="40"
+          />
+          <span class="popup__text-error username-error"> </span>
+          <input
+            id="activity"
+            type="text"
+            required
+            class="popup__input popup__input_data-description"
+            placeholder="Вид деятельности"
+            name="aboutUser"
+            minlength="2"
+            maxlength="200"
+          />
+          <span class="popup__text-error activity-error"> </span>
+          <button
+            class="popup__save-button popup__save-button_disabled form__submit"
+            aria-label="сохранить"
+            type="submit"
+          >
+            Сохранить
+          </button>
+        </form>
+        <button
+          class="popup__close-button"
+          aria-label="закрыть"
+          type="button"
+        ></button>
       </div>
-      <button type="button" class="profile__add-button">
-      </button>
-    </section>
-    <section class="elements content__elements">
-    </section>
-  </main>
-
-  <div class="popup popup_type_edit">
-    <div class="popup__container popup__container_type_edit">
-      <h2 class="popup__title">Редактировать профиль
-      </h2>
-      <form name="popupСhange" class="popup__form popup__form_type_add" novalidate>
-        <input id="username" type="text" required class="popup__input popup__input_data-name" placeholder="Имя"
-          name="input-name" minlength='2' maxlength='40'>
-        <span class="popup__text-error username-error">
-        </span>
-        <input id="activity" type="text" required class="popup__input popup__input_data-description"
-          placeholder="Вид деятельности" name="input-description" minlength='2' maxlength='200'>
-        <span class="popup__text-error activity-error">
-        </span>
-        <button class="popup__save-button popup__save-button_disabled" aria-label="сохранить" type="submit">Сохранить
-        </button>
-      </form>
-      <button class="popup__close-button" aria-label="закрыть" type="button">
-      </button>
     </div>
-  </div>
 
-  <div class="popup popup_type_add">
-    <div class="popup__container popup__container_type_add">
-      <h2 class="popup__title">Новое место
-      </h2>
-      <form name="popupСhange" class="popup__form popup__form_type_add" novalidate>
-        <input id="title" type="text" required class="popup__input popup__input_data-title" placeholder="Название"
-          name="input-title" minlength='2' maxlength='30'>
-        <span class="popup__text-error title-error">
-        </span>
-        <input id="photo" type="url" required class="popup__input popup__input_data-photo"
-          placeholder="Ссылка на картинку" name="input-photo">
-        <span class="popup__text-error photo-error">
-        </span>
-        <button class="popup__save-button popup__save-button_disabled" aria-label="сохранить" type="submit">Сохранить
-        </button>
-      </form>
-      <button class="popup__close-button" aria-label="закрыть" type="button">
-      </button>
-    </div>
-  </div>
-
-  <div class="popup popup_type_photo">
-    <div class="popup__container popup__container_type_photo">
-      <img src="#" class="popup__image-full-screen" alt="">
-      <h2 class="popup__title-full-screen">
-      </h2>
-      <button type="button" aria-label="закрыть" class="popup__close-button">
-      </button>
-    </div>
-  </div>
-
-  <template class="card-template">
-    <article class="element">
-      <img src="#" class="element__image" alt="">
-      <div class="element__signature">
-        <h2 class="element__title">
-        </h2>
-        <button type="button" class="element__heart-delete">
-        </button>
-        <button type="button" aria-label="Убрать сердечко" class="element__heart">
-        </button>
+    <div class="popup popup_type_add">
+      <div class="popup__container popup__container_type_add">
+        <h2 class="popup__title">Новое место</h2>
+        <form
+          name="popupСhange"
+          class="popup__form popup__form_type_add"
+          novalidate
+        >
+          <input
+            id="title"
+            type="text"
+            required
+            class="popup__input popup__input_data-title"
+            placeholder="Название"
+            name="titleForm"
+            minlength="2"
+            maxlength="30"
+          />
+          <span class="popup__text-error title-error"> </span>
+          <input
+            id="photo"
+            type="url"
+            required
+            class="popup__input popup__input_data-photo"
+            placeholder="Ссылка на картинку"
+            name="linkForm"
+          />
+          <span class="popup__text-error photo-error"> </span>
+          <button
+            class="popup__save-button popup__save-button_disabled form__submit"
+            aria-label="сохранить"
+            type="submit"
+          >
+            Сохранить
+          </button>
+        </form>
+        <button
+          class="popup__close-button"
+          aria-label="закрыть"
+          type="button"
+        ></button>
       </div>
-    </article>
-  </template>
+    </div>
 
-  <footer class="footer page__footer">
-    <p class="footer__copyright">&copy;2023 Mesto Russia
-    </p>
-  </footer>
+    <div class="popup popup_type_photo">
+      <div class="popup__container popup__container_type_photo">
+        <img src="#" class="popup__image-full-screen" alt="" />
+        <h2 class="popup__title-full-screen"></h2>
+        <button
+          type="button"
+          aria-label="закрыть"
+          class="popup__close-button"
+        ></button>
+      </div>
+    </div>
 
-</body>
+    <div class="popup popup_type_delete">
+      <div class="popup__container">
+        <button
+          class="popup__close-button"
+          type="button"
+          aria-label="Закрыть картинку"
+        ></button>
+        <h2 class="popup__title">Вы уверены?</h2>
+        <form
+          id="formDelete"
+          class="popup__form form_type_delete"
+          name="deleteForm"
+          method="POST"
+          novalidate
+        >
+          <button
+            class="popup__save-button form__submit"
+            type="submit"
+            aria-label="Да"
+          >
+            Да
+          </button>
+        </form>
+      </div>
+    </div>
 
+    <div class="popup popup_type_main-foto">
+      <div class="popup__container">
+        <button
+          class="popup__close-button"
+          type="button"
+          aria-label="Закрыть картинку"
+        ></button>
+        <h2 class="popup__title">Обновить аватар</h2>
+        <form
+          id="formMainFoto"
+          class="popup__form form_type_main-foto"
+          name="mainFotoForm"
+          method="POST"
+          novalidate
+        >
+          <input
+            class="popup__input form__input_type_link-mainFoto"
+            id="photo"
+            name="avatar"
+            type="url"
+            placeholder="Фото профиля"
+            autocomplete="off"
+            required
+          />
+          <span class="popup__text-error photo-error"></span>
+          <button
+            class="popup__save-button form__submit"
+            type="submit"
+            aria-label="Сохранить"
+          >
+            Сохранить
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <template class="card-template">
+      <article class="element">
+        <img src="#" class="element__image" alt="" />
+        <div class="element__signature">
+          <h2 class="element__title"></h2>
+          <button type="button" class="element__heart-delete"></button>
+          <div class="element__favorite-group">
+            <button
+              type="button"
+              aria-label="Убрать сердечко"
+              class="element__heart"
+            ></button>
+            <span class="element__favorite-num">0</span>
+          </div>
+        </div>
+      </article>
+    </template>
+
+    <footer class="footer page__footer">
+      <p class="footer__copyright">&copy;2023 Mesto Russia</p>
+    </footer>
+  </body>
 </html>
