--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <section class="profile">
         <div class="profile__place">
           <div class="profile__overlay">
-            <img class="profile__icon" alt="иконка пользователя" src="" />
+            <img class="profile__icon" alt="иконка пользователя" src="icon" />
           </div>
           <div class="profile__info">
             <div class="profile__first-line">
@@ -174,7 +174,7 @@
         >
           <input
             class="popup__input"
-            id="photo"
+            id="photo_ava"
             name="avatar"
             type="url"
             placeholder="Фото профиля"
