--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <section class="profile">
         <div class="profile__place">
           <div class="profile__overlay">
-            <img class="profile__icon" alt="иконка пользователя" src="" />
+            <img class="profile__icon" alt="иконка пользователя" src="#" />
           </div>
           <div class="profile__info">
             <div class="profile__first-line">
@@ -99,7 +99,7 @@
           />
           <span class="popup__text-error title-error"> </span>
           <input
-            id="photo"
+            id="url"
             type="url"
             required
             class="popup__input popup__input_data-photo"
