--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
             placeholder="Ссылка на картинку"
             name="linkForm"
           />
-          <span class="popup__text-error photo-error"> </span>
+          <span class="popup__text-error url-error"> </span>
           <button
             class="popup__save-button popup__save-button_disabled"
             aria-label="сохранить"
